k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-deployment
  labels:
    app: vue-laravel-k8s
spec:
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
      - name: vue-app
        image: puzon103/vue
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vue-k8s-service
  labels:
    app: vue-laravel-k8s
spec:
  # type: LoadBalancer
  selector:
    app: vue-app
  ports:
  - port: 80
    name: vue
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  labels:
    app: vue-laravel-k8s
spec:
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
      - name: vue-app
        image: puzon103/laravel
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-k8s-service
  labels:
    app: vue-laravel-k8s
spec:
  # type: LoadBalancer
  selector:
    app: laravel-app
  ports:
  - port: 80
    name: laravel
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-laravel-k8s-ingress
spec:
  rules:
  - host: vue-laravel.alfabeta.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-k8s-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: laravel-k8s-service
            port:
              number: 80
